2015-09-29 Newell Jensen <newell.jensen@gmail.com>

	* ipmi-locate/ipmi-locate.c (main),
	libfreeipmi/locate/ipmi-locate-smbios.c (ipmi_locate_smbios_get_device_info),
	libfreeipmi/locate/ipmi-locate-acpi-spmi.c (ipmi_locate_acpi_spmi_get_device_info),
	libfreeipmi/locate/ipmi-locate-dmidecode.c (ipmi_locate_dmidecode_get_device_info):
	Fix ipmi locate probing on arm32 & arm64.

2015-09-24 Newell Jensen <newell.jensen@gmail.com>

	* ipmi-locate/ipmi-locate.c (main): Fix probing issue on arm32 & arm64
	systems.
	
2015-09-15 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Update get-power-supply-status2 on Supermicro based
	on mailing list discussion.

2015-09-09 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Support get-power-supply-status2 on Supermicro.

	* libfreeipmi/util/ipmi-error-util.c (ipmi_completion_code_strerror_r):
	Support Master read/write specific error codes.

2015-08-18 Craig <agspoon@gmail.com>

	* ipmi-sensors/ipmi-sensors-output-common.c (ipmi_sensors_get_thresholds):
	Handle additional corner case reading sensor thresholds.
	
2015-08-18 Albert Chu <chu11@llnl.gov>

	 * ipmi-sensors/ipmi-sensors-output-common.c (ipmi_sensors_get_thresholds):
	Handle several additional error cases with getting sensor
	thresholds.
	
2015-07-30 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config/ipmi-config-category-dcmi-dcmi-conf-section.c (asset_tag_commit):
	Revert workaround for Supermicro motherboard.

2015-07-27 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config/ipmi-config-category-dcmi-dcmi-conf-section.c (asset_tag_commit):
	Add workaround for Supermicro motherboard.
	
2015-07-27 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-chassis-boot-flags.c (_get_boot_flags):
	Fix debug message output error.
	
2015-06-01  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_4_9

2015-06-01 Albert Chu <chu11@llnl.gov>

	* Audit and fix all strtol parse corner cases.

2015-06-01 James Buren <ryu0@ymail.com>
